<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground">

    <TextView
        android:id="@+id/itemView_Title_Fragment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/primaryFont"
        android:background="@color/secondaryBackground"
        android:text="@string/mainScreen_syrup"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/text_1_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Name"/>

            <Spinner
                android:id="@+id/spinner_1_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/secondaryBackground"
                android:minHeight="25dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/secondaryFont" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/text_2_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:text="@string/size"/>

            <Spinner
                android:id="@+id/spinner_2_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/secondaryBackground"
                android:minHeight="25dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/secondaryFont" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/text_3_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/stock"/>
            <EditText
                android:id="@+id/edit_3_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:hint="Enter Quantity Here"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/text_4_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:text="@string/minimum"/>
            <EditText
                android:id="@+id/edit_4_Fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryBackground"
                android:textColor="@color/secondaryFont"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:hint="Enter Minimum Here"/>
        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_5_Fragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lid"
        android:background="@color/secondaryBackground"
        android:textColor="@color/secondaryFont"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/spinner_3_Fragment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryBackground"
        android:minHeight="25dp"
        android:spinnerMode="dropdown"
        android:layout_margin="15dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton_Fragment2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:background="@color/secondaryBackground"
            android:textColor="@color/secondaryFont"
            android:text="@string/save" />

        <Button
            android:id="@+id/deleteButton_Fragment2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:background="@color/secondaryBackground"
            android:textColor="@color/secondaryFont"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancelButton_Fragment2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:background="@color/secondaryBackground"
            android:textColor="@color/secondaryFont"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>